feat: 支持背景图重置清空、优化大图与视频层级预览，重构二级回复折叠策略，并同步当前社交、排行榜及优惠券等模块改动
【前端优化与重构】
1. 二级回复折叠展开与按需分页策略重构：
   - 在 comment.ts 实体定义中为 FunctionField 扩展了 showCount 控制属性，默认初始化为 2（即初次只展示 2 条回复）。
   - 优化 postInfo.vue 二级回复渲染循环，采用 slice(0, showCount) 切片进行动态长度控制。
   - 新建 handleLoadMoreReplies 触发函数。每次点击“查看更多”时，showCount 优先累加 5 条，当且仅当已展示条数超出了前端已拉取的缓存数量且后端仍有更多数据时，才静默拉取后端新分页。利用前端缓存，显著降低网络请求频次。
   - 实现发表回复与收起的双向联动，当用户自己成功发送新评论时强制扩容 showCount 展现最新评论；收起时自动重置 showCount = 2。
2. 评论区视频放大预览与悬停播放功能实现：
   - 重构 comment.vue 视频组件，移除小卡片自带的 controls 控件。
   - 添加鼠标悬浮触发 @mouseenter 动效，自动静音循环播放，移开时自动暂停。
   - 点击小视频卡片触发 openVideoPreview 激活 Teleport 传送门，在 body 根节点下挂载带 z-50 拥有有声播放、大屏控件的全屏播放对话框，完全对齐帖子视频体验。
3. 解决评论区大图层级遮挡 bug：
   - 评论区 el-image 组件引入 :preview-teleported="true" 参数，将 el-image-viewer 全局挂载至 body，突破了 postInfo.vue 内部 sticky z-41 的发帖作者框对局部 z-index 大图层级的覆盖。
4. 个人主页更换背景图与重置背景优化：
   - 将更换背景、重置背景等上传/重置事件与普通编辑资料（saveProfile）解耦。
   - 重置背景按钮点击绑定到 handleResetBg 异步动作，向后端传递 bgImage = ""，在重置完成后联动更新 userInfo 状态并刷新 userStore。

【后端改动与 bug 修复】
1. 解决重置背景时 user 表 bg_image 字段无法清空问题：
   - User.java 增加 clearBgImage() 实体行为，支持业务上的清空背景动作。
   - UserAPPServiceImpl.java 的 updateProfile 中，判断 command 传入的 bgImage 是否为非空值。若传值且长度为空（即由重置触发），自动触发 clearBgImage() 将数据库中对应的字段物理解绑置为 null。
   - 解决 MyBatis-Plus 默认 updateById 忽略 null 字段不更新的局限，在 UserPO.java 的 bgImage 属性上配置了 TableField 的 updateStrategy = FieldStrategy.IGNORED，确保 null 值被强制写入。
   - 新旧背景发生换绑或清空时，自动异步发布 FileDeleteEvent 物理清除 MinIO 服务器上的原有背景图文件。
2. 解决 MinIO 删除物理文件 NoSuchBucket 异常：
   - FileUploadUtil.java 的 deleteFile 引入 BucketExistsArgs。校验若传入的 bucketName 非默认桶且在 MinIO 中实际不存在，自动视该解析片段为文件的首层路径前缀，并将真实的桶重置为 defaultBucket 默认桶，避免代理后首层目录被误判为 Bucket 而导致删除抛出 NoSuchBucket 错误。
   - FileDeleteListener.java 的 URL 解析逻辑补充对单层无斜杠相对/绝对路径的降级校验，解析为 ParsedMinioUrl(null, path)，保证单层级静态路径的无错删除。

【整体模块快照归并】
1. 优惠券模块（Coupon）：新增 CouponActivity 及 CouponUseScope 的活动领券、限额、使用范围判定及定时调度缓存预热。
2. 排行榜模块（Rank Board）：支持 CreatorRank, PostRank 以及 TopicRank 榜单并利用 Redis 性能提供高速排行。
3. 社交评论核心（Comment）：重构了后端树形两层架构评论，包含多媒体附件处理器等。