@@ -1,7 +1,7 @@
 package com.summit.stp.post.infrastructure.persistence;
 
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
-import com.summit.stp.post.application.vo.PostTagRelVO;
+import com.summit.stp.post.domain.model.PostTag;
 import com.summit.stp.post.domain.repository.PostTagRelRepository;
 import com.summit.stp.post.infrastructure.persistence.mapper.PostTagRelMapper;
 import com.summit.stp.post.infrastructure.persistence.po.PostTagRelPO;
@@ -9,6 +9,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Repository
 @RequiredArgsConstructor
@@ -16,11 +17,15 @@ public class PostTagRelRepositoryImpl implements PostTagRelRepository {
     private final PostTagRelMapper postTagRelMapper;
 
     @Override
-    public void save(PostTagRelPO rel) {
-        if (rel.getId() == 0) {
-            postTagRelMapper.insert(rel);
+    public void save(PostTag rel) {
+        if (rel == null) {
+            return;
+        }
+        PostTagRelPO po = toPO(rel);
+        if (po.getId() == null || po.getId() == 0) {
+            postTagRelMapper.insert(po);
         } else {
-            postTagRelMapper.updateById(rel);
+            postTagRelMapper.updateById(po);
         }
     }
 
@@ -37,30 +42,30 @@ public class PostTagRelRepositoryImpl implements PostTagRelRepository {
     }
 
     @Override
-    public List<PostTagRelVO> findByPostId(Long postId) {
+    public List<PostTag> findByPostId(Long postId) {
         return postTagRelMapper.selectList(new LambdaQueryWrapper<PostTagRelPO>().eq(PostTagRelPO::getPostId, postId))
                 .stream()
-                .map(this::convertToVO)
-                .toList();
+                .map(this::toDomain)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public List<PostTagRelVO> findByTagId(Long tagId) {
+    public List<PostTag> findByTagId(Long tagId) {
         return postTagRelMapper.selectList(new LambdaQueryWrapper<PostTagRelPO>().eq(PostTagRelPO::getTagId, tagId))
                 .stream()
-                .map(this::convertToVO)
-                .toList();
+                .map(this::toDomain)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public List<PostTagRelVO> findByPostIds(List<Long> postIds) {
+    public List<PostTag> findByPostIds(List<Long> postIds) {
         if (postIds == null || postIds.isEmpty()) {
             return List.of();
         }
         return postTagRelMapper.selectList(new LambdaQueryWrapper<PostTagRelPO>().in(PostTagRelPO::getPostId, postIds))
                 .stream()
-                .map(this::convertToVO)
-                .toList();
+                .map(this::toDomain)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -70,11 +75,27 @@ public class PostTagRelRepositoryImpl implements PostTagRelRepository {
         postTagRelMapper.insert(list);
     }
 
-    private PostTagRelVO convertToVO(PostTagRelPO po) {
-        return PostTagRelVO.builder()
+    private PostTag toDomain(PostTagRelPO po) {
+        if (po == null) {
+            return null;
+        }
+        return PostTag.builder()
                 .id(po.getId())
                 .postId(po.getPostId())
                 .tagId(po.getTagId())
+                .createTime(po.getCreateTime())
+                .build();
+    }
+
+    private PostTagRelPO toPO(PostTag domain) {
+        if (domain == null) {
+            return null;
+        }
+        return PostTagRelPO.builder()
+                .id(domain.getId())
+                .postId(domain.getPostId() != null ? domain.getPostId() : 0L)
+                .tagId(domain.getTagId() != null ? domain.getTagId() : 0L)
+                .createTime(domain.getCreateTime())
                 .build();
     }
 }
